--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Demo Project</title>
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="src/css/style.css" rel="stylesheet" />
     <link
       href="https://fonts.googleapis.com/css?family=Montserrat:400,800"
       rel="stylesheet"
@@ -16,7 +16,7 @@
       integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
       crossorigin="anonymous"
     />
-    <script src="main.js" defer></script>
+    <script src="src/index.js" defer></script>
   </head>
   <body>
     <div class="container" id="container">
