feat: - add telegram auth and mongodb

--- a/client/index.html
+++ b/client/index.html
@@ -25,7 +25,9 @@
           <h2>Create Account</h2>
           <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social"><i class="fab fa-telegram-plane"></i></a>
+            <a href="http://localhost:3000/auth/telegram" class="social"
+              ><i class="fab fa-telegram-plane"></i
+            ></a>
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
           </div>
           <span>or use your email for registration</span>
@@ -40,7 +42,9 @@
           <h2>Sign in</h2>
           <div class="social-container">
             <a href="#" class="social"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social"><i class="fab fa-telegram-plane"></i></a>
+            <a href="http://localhost:3000/auth/telegram" class="social"
+              ><i class="fab fa-telegram-plane"></i
+            ></a>
             <a href="#" class="social"><i class="fab fa-linkedin-in"></i></a>
           </div>
           <span>or use your account</span>
